--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "authors": [
     {
       "name": "Anton Devcoder",
-      "email": "discount.anton@gmail.com",
+      "email": "discount.anton@gmail.com"
     }
   ],
   "require": {
